@@ -49,35 +49,52 @@ public class PerfilServlet extends HttpServlet {
 
         String nuevoNombre = request.getParameter("nombre");
         String nuevoTelefono = request.getParameter("telefono");
+        String nuevoCorreo = request.getParameter("correo");
 
-        // 1. Validar y actualizar el Nombre
-        if (nuevoNombre != null && !nuevoNombre.isBlank()) {
-            usuarioLogueado.setNombre(nuevoNombre.trim());
+        // 1. Validar Nombre: No nulo, no vacío y que no sea solo espacios en blanco
+        if (nuevoNombre == null || nuevoNombre.trim().isEmpty()) {
+            response.sendRedirect("perfil?error=nombreInvalido");
+            return;
         }
 
-        // 2. Limpiar y convertir el Teléfono a tipo 'long'
-        if (nuevoTelefono != null && !nuevoTelefono.isBlank()) {
-            try {
-                // Remueve espacios, guiones o signos '+' dejando únicamente los dígitos
-                String soloNumeros = nuevoTelefono.replaceAll("[^0-9]", "");
+        // 2. Validar Teléfono estrictamente a 10 dígitos numéricos
+        if (nuevoTelefono == null || !nuevoTelefono.trim().matches("\\d{10}")) {
+            response.sendRedirect("perfil?error=telefonoInvalido");
+            return;
+        }
 
-                if (!soloNumeros.isBlank()) {
-                    long telefonoLong = Long.parseLong(soloNumeros);
-                    usuarioLogueado.setTelefono(telefonoLong);
-                }
-            } catch (NumberFormatException e) {
-                System.err.println("Error al parsear el número telefónico: " + nuevoTelefono);
-                e.printStackTrace();
+        // 3. Validar Correo Institucional (@utez.edu.mx)
+        if (nuevoCorreo == null || !nuevoCorreo.toLowerCase().endsWith("@utez.edu.mx")) {
+            response.sendRedirect("perfil?error=correoInvalido");
+            return;
+        }
+
+        try {
+            String nombreLimpio = nuevoNombre.trim();
+            long telefonoLong = Long.parseLong(nuevoTelefono.trim());
+            String correoLimpio = nuevoCorreo.trim();
+
+            // 4. Actualizar la base de datos (asegúrate de incluir el correo en tu DAO si aplica)
+            boolean actualizado = userDao.updatePerfil(
+                    usuarioLogueado.getId(),
+                    nombreLimpio,
+                    telefonoLong
+            );
+
+            if (actualizado) {
+                usuarioLogueado.setNombre(nombreLimpio);
+                usuarioLogueado.setTelefono(telefonoLong);
+                usuarioLogueado.setCorreo(correoLimpio); // Si manejas el correo en el objeto User
+                session.setAttribute("usuario", usuarioLogueado);
+
+                response.sendRedirect("perfil?msg=actualizado");
+            } else {
+                response.sendRedirect("perfil?error=1");
             }
-        }
 
-        boolean actualizado = userDao.updatePerfil(usuarioLogueado.getId(), usuarioLogueado.getNombre(), usuarioLogueado.getTelefono());
-
-        if (actualizado) {
-            session.setAttribute("usuario", usuarioLogueado);
-            response.sendRedirect("perfil?msg=actualizado");
-        } else {
-            response.sendRedirect("perfil?error=1");
+        } catch (NumberFormatException e) {
+            System.err.println("Error al parsear el número telefónico: " + nuevoTelefono);
+            response.sendRedirect("perfil?error=telefonoInvalido");
         }
     }
 }
